Finished script for 'Purchasing Analysis'

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -116,7 +116,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "0            576"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -276,7 +276,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,52 +319,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046a\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Count</th>        <th class=\"col_heading level0 col1\" >Percentage</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046a\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" ></th>        <th class=\"col_heading level0 col1\" >Total Count</th>        <th class=\"col_heading level0 col2\" >Percentage</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046alevel0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
-       "                        <td id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046arow0_col0\" class=\"data row0 col0\" >81</td>\n",
-       "                        <td id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046arow0_col1\" class=\"data row0 col1\" >14.06%</td>\n",
+       "                                <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow0_col0\" class=\"data row0 col0\" >Male</td>\n",
+       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow0_col1\" class=\"data row0 col1\" >484</td>\n",
+       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow0_col2\" class=\"data row0 col2\" >84.03%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046alevel0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
-       "                        <td id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046arow1_col0\" class=\"data row1 col0\" >484</td>\n",
-       "                        <td id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046arow1_col1\" class=\"data row1 col1\" >84.03%</td>\n",
+       "                                <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow1_col0\" class=\"data row1 col0\" >Female</td>\n",
+       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow1_col1\" class=\"data row1 col1\" >81</td>\n",
+       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow1_col2\" class=\"data row1 col2\" >14.06%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046alevel0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
-       "                        <td id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046arow2_col0\" class=\"data row2 col0\" >11</td>\n",
-       "                        <td id=\"T_7649e2c6_9c21_11eb_a0fb_784f436a046arow2_col1\" class=\"data row2 col1\" >1.91%</td>\n",
+       "                                <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow2_col0\" class=\"data row2 col0\" >Other / Non-Disclosed</td>\n",
+       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow2_col1\" class=\"data row2 col1\" >11</td>\n",
+       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow2_col2\" class=\"data row2 col2\" >1.91%</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f9bc3347250>"
+       "<pandas.io.formats.style.Styler at 0x7f92740287c0>"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "unique_players_df = purchase_data_df.drop_duplicates([\"SN\"])\n",
-    "#gender_group = unique_players_df.groupby([\"Gender\"])\n",
-    "#gender_group_count = gender_group[\"SN\"].count()\n",
-    "#gender_group_percentage = gender_group_count/gender_group_count.sum()\n",
-    "#gender_group_percentage.type()\n",
-    "\n",
-    "gender_df = unique_players_df.groupby(\"Gender\")[\"SN\"].agg(['count'])\n",
-    "gender_df[\"Count\"] = gender_df['count']\n",
-    "gender_df[\"Percentage\"] = (gender_df['count']/total_players)\n",
-    "gender_demographics_df = gender_df[['Count','Percentage']].style.format({'Percentage':'{:.2%}'})\n",
-    "gender_demographics_df"
+    "male_count = unique_players_df.loc[unique_players_df[\"Gender\"] == \"Male\",\"SN\"].count()\n",
+    "male_percent = \"{:.2%}\". format(male_count/total_players)\n",
+    "female_count = unique_players_df.loc[unique_players_df[\"Gender\"] == \"Female\",\"SN\"].count()\n",
+    "female_percent = \"{:.2%}\". format(female_count/total_players)\n",
+    "others_count = unique_players_df.loc[unique_players_df[\"Gender\"] == \"Other / Non-Disclosed\",\"SN\"].count()\n",
+    "others_percent = \"{:.2%}\". format(others_count/total_players)\n",
+    "gender_demographics_df = pd.DataFrame({\n",
+    "    \"\":[\"Male\", \"Female\", \"Other / Non-Disclosed\"],\n",
+    "    \"Total Count\":[male_count, female_count, others_count],\n",
+    "    \"Percentage\":[male_percent, female_percent, others_percent],\n",
+    "    })\n",
+    "gender_demographics_df.style.hide_index()"
    ]
   },
   {
@@ -395,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -436,48 +438,62 @@
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>113</td>\n",
-       "      <td>$3.20</td>\n",
-       "      <td>$361.94</td>\n",
-       "      <td>$4.47</td>\n",
+       "      <td>3.203009</td>\n",
+       "      <td>361.94</td>\n",
+       "      <td>4.468395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
-       "      <td>$3.02</td>\n",
-       "      <td>$1,967.64</td>\n",
-       "      <td>$4.07</td>\n",
+       "      <td>3.017853</td>\n",
+       "      <td>1967.64</td>\n",
+       "      <td>4.065372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
-       "      <td>$3.35</td>\n",
-       "      <td>$50.19</td>\n",
-       "      <td>$4.56</td>\n",
+       "      <td>3.346000</td>\n",
+       "      <td>50.19</td>\n",
+       "      <td>4.562727</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
+       "                       Purchase Count  Average Purchase Price  \\\n",
+       "Gender                                                          \n",
+       "Female                            113                3.203009   \n",
+       "Male                              652                3.017853   \n",
+       "Other / Non-Disclosed              15                3.346000   \n",
        "\n",
-       "                      Total Purchase Value Avg Total Purchase per Person  \n",
-       "Gender                                                                    \n",
-       "Female                             $361.94                         $4.47  \n",
-       "Male                             $1,967.64                         $4.07  \n",
-       "Other / Non-Disclosed               $50.19                         $4.56  "
+       "                       Total Purchase Value  Avg Total Purchase per Person  \n",
+       "Gender                                                                      \n",
+       "Female                               361.94                       4.468395  \n",
+       "Male                                1967.64                       4.065372  \n",
+       "Other / Non-Disclosed                 50.19                       4.562727  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#gender_group = unique_players_df.groupby([\"Gender\"])\n",
+    "#gender_group_count = gender_group[\"SN\"].count()\n",
+    "#gender_group_percentage = gender_group_count/gender_group_count.sum()\n",
+    "#gender_group_percentage.type()\n",
+    "\n",
+    "gender_df = purchase_data_df.groupby(\"Gender\")[\"Price\"].agg(['count','mean','sum'])\n",
+    "gender_df[\"Purchase Count\"] = gender_df['count']\n",
+    "gender_df[\"Average Purchase Price\"] = gender_df['mean']\n",
+    "gender_df[\"Total Purchase Value\"] = gender_df['sum']\n",
+    "gender_df[\"Unique Buyers\"] = [81,484,11]\n",
+    "gender_df[\"Avg Total Purchase per Person\"] = gender_df['sum']/gender_df[\"Unique Buyers\"]\n",
+    "gender_demographics_df = gender_df[[\"Purchase Count\",\"Average Purchase Price\",\"Total Purchase Value\",\"Avg Total Purchase per Person\"]]\n",
+    "gender_demographics_df"
+   ]
   },
   {
    "cell_type": "markdown",
