--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -116,7 +116,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,12 +191,13 @@
        "0            576"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Get the total player count then store in DF\n",
     "total_players = len(purchase_data_df[\"SN\"].unique())\n",
     "player_count_df = pd.DataFrame({\"Total Players\":[total_players]})\n",
     "player_count_df"
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -276,12 +277,13 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Get different variables and store in DF\n",
     "unique_items = len(purchase_data_df[\"Item Name\"].unique())\n",
     "average_price = \"${:,.2f}\". format(purchase_data_df[\"Price\"].mean())\n",
     "total_purchases = len(purchase_data_df)\n",
@@ -319,41 +321,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046a\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" ></th>        <th class=\"col_heading level0 col1\" >Total Count</th>        <th class=\"col_heading level0 col2\" >Percentage</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046a\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" ></th>        <th class=\"col_heading level0 col1\" >Total Count</th>        <th class=\"col_heading level0 col2\" >Percentage</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow0_col0\" class=\"data row0 col0\" >Male</td>\n",
-       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow0_col1\" class=\"data row0 col1\" >484</td>\n",
-       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow0_col2\" class=\"data row0 col2\" >84.03%</td>\n",
+       "                                <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow0_col0\" class=\"data row0 col0\" >Male</td>\n",
+       "                        <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow0_col1\" class=\"data row0 col1\" >484</td>\n",
+       "                        <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow0_col2\" class=\"data row0 col2\" >84.03%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow1_col0\" class=\"data row1 col0\" >Female</td>\n",
-       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow1_col1\" class=\"data row1 col1\" >81</td>\n",
-       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow1_col2\" class=\"data row1 col2\" >14.06%</td>\n",
+       "                                <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow1_col0\" class=\"data row1 col0\" >Female</td>\n",
+       "                        <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow1_col1\" class=\"data row1 col1\" >81</td>\n",
+       "                        <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow1_col2\" class=\"data row1 col2\" >14.06%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow2_col0\" class=\"data row2 col0\" >Other / Non-Disclosed</td>\n",
-       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow2_col1\" class=\"data row2 col1\" >11</td>\n",
-       "                        <td id=\"T_7a30c7e0_9c28_11eb_a897_784f436a046arow2_col2\" class=\"data row2 col2\" >1.91%</td>\n",
+       "                                <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow2_col0\" class=\"data row2 col0\" >Other / Non-Disclosed</td>\n",
+       "                        <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow2_col1\" class=\"data row2 col1\" >11</td>\n",
+       "                        <td id=\"T_b3312dfe_9c7e_11eb_b02b_784f436a046arow2_col2\" class=\"data row2 col2\" >1.91%</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f92740287c0>"
+       "<pandas.io.formats.style.Styler at 0x7ffdb1755370>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Get unique players DF and use to obtain different information by gender and store in DF\n",
     "unique_players_df = purchase_data_df.drop_duplicates([\"SN\"])\n",
     "male_count = unique_players_df.loc[unique_players_df[\"Gender\"] == \"Male\",\"SN\"].count()\n",
     "male_percent = \"{:.2%}\". format(male_count/total_players)\n",
@@ -397,101 +400,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gender</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>113</td>\n",
-       "      <td>3.203009</td>\n",
-       "      <td>361.94</td>\n",
-       "      <td>4.468395</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>652</td>\n",
-       "      <td>3.017853</td>\n",
-       "      <td>1967.64</td>\n",
-       "      <td>4.065372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>15</td>\n",
-       "      <td>3.346000</td>\n",
-       "      <td>50.19</td>\n",
-       "      <td>4.562727</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_40769cfe_9c92_11eb_b02b_784f436a046a\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_40769cfe_9c92_11eb_b02b_784f436a046alevel0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow0_col0\" class=\"data row0 col0\" >113</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_40769cfe_9c92_11eb_b02b_784f436a046alevel0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow1_col0\" class=\"data row1 col0\" >652</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow1_col2\" class=\"data row1 col2\" >$1,967.64</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_40769cfe_9c92_11eb_b02b_784f436a046alevel0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow2_col0\" class=\"data row2 col0\" >15</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
+       "                        <td id=\"T_40769cfe_9c92_11eb_b02b_784f436a046arow2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
       ],
       "text/plain": [
-       "                       Purchase Count  Average Purchase Price  \\\n",
-       "Gender                                                          \n",
-       "Female                            113                3.203009   \n",
-       "Male                              652                3.017853   \n",
-       "Other / Non-Disclosed              15                3.346000   \n",
-       "\n",
-       "                       Total Purchase Value  Avg Total Purchase per Person  \n",
-       "Gender                                                                      \n",
-       "Female                               361.94                       4.468395  \n",
-       "Male                                1967.64                       4.065372  \n",
-       "Other / Non-Disclosed                 50.19                       4.562727  "
+       "<pandas.io.formats.style.Styler at 0x7ffdb2de9580>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#gender_group = unique_players_df.groupby([\"Gender\"])\n",
-    "#gender_group_count = gender_group[\"SN\"].count()\n",
-    "#gender_group_percentage = gender_group_count/gender_group_count.sum()\n",
-    "#gender_group_percentage.type()\n",
-    "\n",
+    "#New df grouped by adding count, mean, sum\n",
+    "#Add new columns with different Titles/Values\n",
+    "#Create gender_demographics_df with format\n",
     "gender_df = purchase_data_df.groupby(\"Gender\")[\"Price\"].agg(['count','mean','sum'])\n",
     "gender_df[\"Purchase Count\"] = gender_df['count']\n",
     "gender_df[\"Average Purchase Price\"] = gender_df['mean']\n",
     "gender_df[\"Total Purchase Value\"] = gender_df['sum']\n",
     "gender_df[\"Unique Buyers\"] = [81,484,11]\n",
-    "gender_df[\"Avg Total Purchase per Person\"] = gender_df['sum']/gender_df[\"Unique Buyers\"]\n",
-    "gender_demographics_df = gender_df[[\"Purchase Count\",\"Average Purchase Price\",\"Total Purchase Value\",\"Avg Total Purchase per Person\"]]\n",
+    "gender_df[\"Avg Total Purchase per Person\"] = (gender_df['sum']/gender_df[\"Unique Buyers\"]).round(2)\n",
+    "gender_demographics_df = gender_df[[\"Purchase Count\",\"Average Purchase Price\",\"Total Purchase Value\",\"Avg Total Purchase per Person\"]].style.format({'Average Purchase Price':'${:,.2f}','Total Purchase Value':'${:,.2f}','Avg Total Purchase per Person':'${:,.2f}' })\n",
     "gender_demographics_df"
    ]
   },
