Added conclusions for PyCitySchools

--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1344,6 +1344,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After analyzing the School and Student Data we can observe there are the following trends:\n",
+    "\n",
+    "  * School Type & Size: There is a huge difference in Average Scores and % Passing, for Charter Schools 90% of students pass overall while only 54% of students pass in District Schools. When considering size, Small and Medium Schools have similar overall pass with 90% and only 58% for Large Schools. \n",
+    "  \n",
+    "  \n",
+    "  * Spending Ranges: As Spending per Student increases the average scores and % passing decreases for every metric. \n",
+    "  \n",
+    "We can conclude that in Small and Medium Schools students might be getting more personalized attention than in Large Schools and that might explain the better test scores and % of students that pass. On the other hand as School Spending per Student increases the Average Scores are dropping, this might be explained by having many distractions for students that lose focus on their study. \n",
+    "  \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
